--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@types/node": "^10.12.21",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "font-awesome": "^4.7.0",
