--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "tsc": "tsc",
-    "start": "node --inspect=5858 -r ts-node/register bin/app.ts",
+    "start": "node ts-node/register bin/app.ts",
     "dev": "nodemon",
     "coverage": "jest --coverage",
     "typeorm": "typeorm"
