--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
+    "buefy": "^0.7.3",
     "bulma": "^0.7.2",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
